--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -69,9 +69,9 @@ body {
     .page {
         margin-left: 5rem;
         padding: 8rem 4rem 0;
-        min-height: calc(100vh - 4rem - 8rem);
+        min-height: calc(100vh - 4rem);
         @media screen and (max-width: 480px){
-            padding: 6rem 0;
+            padding: 4rem 0.5rem 0;
             margin-left: 0;
         }
     }
