--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -13,9 +13,14 @@
     .cc-avatar { cursor: pointer; }
 
     .icon-avatar {
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        cursor: pointer;
         .cc-icon svg {
-            height: 40px;
-            width: 40px;
+            height: 2rem;
+            width: 2rem;
         }
     }
 }
