--- a/client/src/views/Home/Home.scss
+++ b/client/src/views/Home/Home.scss
@@ -1,12 +1,11 @@
 .home-container {
-    section {
-        margin-bottom: 2rem;
-        box-shadow: 0 0 0.5rem 0 var(--card-box-shadow-color-hover);
-        &:last-child {
-            margin: 0;
+    .add-new-tourney {
+        position: absolute;
+        bottom: 0.5rem;
+        right: 0.5rem;
+        svg{
+            width: 3rem;
+            height: auto;
         }
-    }
-    .no-content h1 {
-        text-align: center;
     }
 }
