--- a/client/src/commonComponents/Label/Label.scss
+++ b/client/src/commonComponents/Label/Label.scss
@@ -24,6 +24,9 @@
     & + .cc-input-component .cc-input {
         padding: 1.42rem 0.714rem 0.0714rem;
     }
+    & + .cc-input-component .cc-text-area {
+        padding: 1.42rem 0.714rem 0.0714rem;
+    }
 }
 
 .cc-form-field-text-input,
