--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -67,12 +67,11 @@ body {
         }
     }
     .page {
-        margin-left: 5rem;
-        padding: 8rem 4rem 0;
+        margin: 8rem 4rem 0;
         min-height: calc(100vh - 4rem);
+        height: 1px;
         @media screen and (max-width: 480px){
-            padding: 4rem 0.5rem 0;
-            margin-left: 0;
+            margin: 4rem 0.5rem 0;
         }
     }
 }
