Tourney form add tourney first

--- a/client/src/components/TourneyForm/TourneyForm.scss
+++ b/client/src/components/TourneyForm/TourneyForm.scss
@@ -3,6 +3,7 @@
     height: 100%;
     & > form {
         position: relative;
+        padding-bottom: 6rem;
     }
     .img-container {
         display: flex;
@@ -30,10 +31,13 @@
         display: flex;
         width: calc(100%);
         justify-content: space-between;
-        position: sticky;
+        position: fixed;
         background-color: var(--navigation-bg);
         bottom: 0;
-        padding: 1rem 0.5rem;
+        padding: 1rem 0rem;
         margin: 0 -0.5rem;
+        button {
+            margin: 0 1rem;
+        }
     }
 }
