--- a/client/src/commonComponents/Select/Select.scss
+++ b/client/src/commonComponents/Select/Select.scss
@@ -20,30 +20,17 @@
             overflow: hidden;
         }
 
-        &-arrow {
-            position: absolute;
-            right: 0.5rem;
-            top: 0.75rem;
-            width: 1.5rem;
-            height: 1.5rem;
-            fill: var(--app-color);
-            transition: transform 0.25s ease-in-out;
+        &:hover:not(:disabled), &:focus:not(:disabled) {
+            background-color: var(--form-element-hover);
         }
-
-        &-clean {
-            position: absolute;
-            right: 2.125rem;
-            top: 0.75rem;
-            z-index: 1;
-            width: 1.25rem;
-            height: 1.25rem;
-            fill: var(--app-color);
+        &:focus:not(:disabled) {
+            border-bottom: 2px solid var(--form-element-border);
         }
 
         &:disabled {
             color: var(--form-element-disabled-color);
             border-bottom: 1px solid var(--form-element-disabled-border);
-            background-color: var(--form-element-bg);
+            background-color: var(--form-element-disabled-bg);
             cursor: not-allowed;
 
             &::placeholder {
@@ -55,11 +42,28 @@
             }
         }
 
-        &:hover:not(:disabled), &:focus:not(:disabled) {
-            background-color: var(--form-element-hover);
+        &-arrow {
+            position: absolute;
+            right: 0.5rem;
+            top: 0.75rem;
+            width: 1.5rem;
+            height: 1.5rem;
+            fill: var(--select-trigger-icon-color);
+            transition: transform 0.25s ease-in-out;
         }
-        &:focus:not(:disabled) {
-            border-bottom: 2px solid var(--form-element-border);
+
+        .cc-select-clean-value {
+            position: absolute;
+            right: 2.40rem;
+            top: 0.85rem;
+            z-index: 1;
+            width: 1.40rem;
+            height: 1.40rem;
+            fill: var(--select-trigger-icon-color);
+
+            &:focus {
+                box-shadow: var(--focus-state);
+            }
         }
     }
 
@@ -69,20 +73,20 @@
     }
 
     &-options {
-        background-color: var(--form-element-bg);
-        border: 1px solid transparent;
+        background-color: var(--select-list-background-color);
+        border: 1px solid var(--select-option-border-color);
         display: none;
         width: 100%;
-        max-height: 8.50rem;
+        max-height: 9.65rem;
         overflow-y: auto;
     }
+}
 
-    &-open {
-        .cc-select-options {
-            display: block;
-        }
-        .cc-select-input-arrow {
-            transform: rotateZ(180deg);
-        }
+.cc-select-open {
+    .cc-select-options {
+        display: block;
+    }
+    .cc-select-input-arrow {
+        transform: rotateZ(180deg);
     }
 }
