--- a/client/src/commonComponents/Select/SelectAllOptions/SelectAllOptions.scss
+++ b/client/src/commonComponents/Select/SelectAllOptions/SelectAllOptions.scss
@@ -1,18 +1,16 @@
-.cc-option {
-    padding: 0.75rem 0.375rem;
-    max-height: 2.75rem;
-    display: flex;
-    align-items: center;
+.cc-select-all {
+    padding: 0.85rem 0.425rem;
+    max-height: 3.15rem;
+    display: none;
+    background-color: var(--select-list-background-color);
+    border: 1px solid var(--select-option-border-color);
+    border-bottom: 1px solid var(--form-element-border);
     cursor: pointer;
+}
 
-    &:hover, &-current {
-        color: var(--app-highlight);
-        background-color: var(--form-element-hover);
-    }
-
-    &-disabled {
-        color: var(--form-element-disabled-color);
-        background-color: 1px solid var(--form-element-bg);
-        cursor: not-allowed;
+.cc-select-open {
+    .cc-select-all {
+        display: flex;
+        align-items: center;
     }
 }
