--- a/client/src/commonComponents/Select/SelectCheckbox/SelectCheckbox.scss
+++ b/client/src/commonComponents/Select/SelectCheckbox/SelectCheckbox.scss
@@ -1,18 +1,48 @@
-.cc-option {
-    padding: 0.75rem 0.375rem;
-    max-height: 2.75rem;
-    display: flex;
-    align-items: center;
+.cc-select-checkbox {
+    width: 1.3rem;
+    min-width: 1.3rem;
+    height: 1.3rem;
+    margin-right: 0.6rem;
+    background-color: var(--checkbox-bg-color);
+    border: 1px solid var(--checked-border-color);
     cursor: pointer;
+}
 
-    &:hover, &-current {
-        color: var(--app-highlight);
-        background-color: var(--form-element-hover);
+.cc-select-checkbox-icon-selected svg,
+.cc-select-checkbox-icon-indeterminate svg{
+    display: none;
+}
+
+.cc-select-checkbox-selected {
+    background-color: var(--checked-bg-color);
+    border: 1px solid var(---checked-border-color);
+    .cc-select-checkbox-icon-selected svg {
+        display: block;
+        fill: var(--checked-icon-color)!important;
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
+
+.cc-select-checkbox-indeterminate {
+    background-color: var(--checked-bg-color);
+    border: 1px solid var(---checked-border-color);
+    .cc-select-checkbox-icon-indeterminate svg {
+        display: block;
+        fill: var(--checked-icon-color)!important;
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
+
+.cc-option-disabled,
+.cc-select-search-no-results {
+    .cc-select-checkbox {
+        border-color: var(--select-option-disable-border-color);
+        pointer-events: none;
     }
 
-    &-disabled {
-        color: var(--form-element-disabled-color);
-        background-color: 1px solid var(--form-element-bg);
-        cursor: not-allowed;
+    .cc-select-checkbox-selected, .cc-select-checkbox-indeterminate {
+        background-color: var(--checked-disabled-bg-color);
     }
 }
