--- a/client/src/components/TourneyForm/TourneyForm.scss
+++ b/client/src/components/TourneyForm/TourneyForm.scss
@@ -17,7 +17,7 @@
     }
 
     &-new-team {
-        text-align: left;
+        text-align: right;
         cursor: pointer;
         background: none;
         border: none;
