--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -13,3 +13,12 @@ $grey-600: #23232F;
 $grey-700: #000000B3;
 
 $orange: #FF810A;
+
+$error: #F95D54;
+$error-bg: #2C0B0e;
+$warning: #FFCD39;
+$warning-bg: #664D03;
+$success: #57E188;
+$success-bg: #0A3622;
+$info: #CFE2FF;
+$info-bg: #052C65;
