--- a/client/src/commonComponents/List/List.scss
+++ b/client/src/commonComponents/List/List.scss
@@ -2,11 +2,14 @@
     padding: 0 2rem;
     list-style: none;
     li {
-        line-height: 3rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 3rem;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        padding-left: 3rem;
+        padding: 0 3rem;
 
         border-top: 0;
         border: 1px solid #3a3a4a;
