--- a/client/src/commonComponents/ErrorMessage/ErrorMessage.scss
+++ b/client/src/commonComponents/ErrorMessage/ErrorMessage.scss
@@ -3,20 +3,22 @@
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
+    padding: 2rem 0;
     &-headline {
         display: flex;
+        flex-flow: column;
         justify-content: center;
         align-items: center;
-        gap: 1rem;
         &-icon {
             color: var(--error);
             svg {
-                height: 3rem;
-                width: 3rem;
+                height: 5rem;
+                width: 5rem;
             }
         }
     }
     &-msg {
+        text-align: center;
         margin: 0.5rem;
     }
 
