--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -12,7 +12,7 @@ $grey-580: #2E2E38;
 $grey-600: #23232F;
 $grey-700: #000000B3;
 
-$orange: #FF810A;
+$branding: #FFC107;
 
 $error: #F95D54;
 $error-bg: #2C0B0e;
