--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,7 +1,7 @@
 .navigation {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     overflow: hidden;
     top: 4rem;
     height: 100%; // Modify in the future
