--- a/client/src/commonComponents/List/List.scss
+++ b/client/src/commonComponents/List/List.scss
@@ -2,13 +2,7 @@
     padding: 0 2rem;
     list-style: none;
     li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 3rem;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        min-height: 3rem;
         padding: 0 3rem;
 
         border-top: 0;
