--- a/client/src/components/TeamForm/TeamForm.scss
+++ b/client/src/components/TeamForm/TeamForm.scss
@@ -27,6 +27,14 @@
         margin-right: 0;
     }
 
+    &-player-list {
+        display: grid;
+        grid-template-columns: 1fr max-content 24px;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+
     &-action-buttons {
         display: flex;
         width: calc(100%);
