--- a/client/src/components/TourneyForm/TourneyForm.scss
+++ b/client/src/components/TourneyForm/TourneyForm.scss
@@ -27,6 +27,13 @@
         margin-right: 0;
     }
 
+    &-equipo-list {
+        display: grid;
+        grid-template-columns: 1fr max-content;
+        justify-content: center;
+        align-items: center;
+    }
+
     &-action-buttons {
         display: flex;
         width: calc(100%);
