Page, Card, Form - Edit Tourney and Team. Player Set up

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -40,10 +40,12 @@
         border: none;
         transition: background-color 200ms ease-in;
 
+        .cc-icon {
+            width: 100%;
+        }
         svg {
-            width: 3rem;
+            width: 2rem;
             height: auto;
-            padding-left: 1rem;
         }
 
         h1 {
