--- a/client/src/components/TeamCard/TeamCard.scss
+++ b/client/src/components/TeamCard/TeamCard.scss
@@ -9,7 +9,7 @@
             display: flex;
             align-items: center;
         }
-        &-delete {
+        &-actions {
             display: flex;
             justify-content: flex-end;
         }
