--- a/client/src/components/PlayerCard/PlayerCard.scss
+++ b/client/src/components/PlayerCard/PlayerCard.scss
@@ -1,15 +1,15 @@
-.team-card {
+.player-card {
     width: 100%;
     margin: 1rem 0;
     &-header {
         display: grid;
-        grid-template-columns: max-content max-content 1fr;
+        grid-template-columns: max-content 1fr;
         gap: 1rem;
         &-player-count {
             display: flex;
             align-items: center;
         }
-        &-delete {
+        &-actions {
             display: flex;
             justify-content: flex-end;
         }
