--- a/client/src/components/TeamForm/TeamForm.scss
+++ b/client/src/components/TeamForm/TeamForm.scss
@@ -5,6 +5,9 @@
         position: relative;
         padding-bottom: 6rem;
     }
+    .cc-form-field {
+        margin: 1.5rem 0;
+    }
     .img-container {
         display: flex;
         justify-content: center;
