--- a/client/src/views/Home/Home.scss
+++ b/client/src/views/Home/Home.scss
@@ -4,7 +4,7 @@
     min-height: calc(100vh - 8rem);
     height: 100%;
     @media screen and (max-width: 576px){
-        margin: 4rem 0.5rem 0;
+        margin: 4rem 0 0;
     }
     .add-new {
         position: fixed;
