--- a/client/src/components/TourneyForm/TourneyForm.scss
+++ b/client/src/components/TourneyForm/TourneyForm.scss
@@ -1,6 +1,11 @@
 .tourney-form {
     position: relative;
     height: 100%;
+
+    .cc-form-field {
+        margin: 1.5rem 0;
+    }
+
     & > form {
         position: relative;
         padding-bottom: 6rem;
