--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -12,6 +12,12 @@ $grey-580: #2E2E38;
 $grey-600: #23232F;
 $grey-700: #000000B3;
 
+$red-300: #F95D54;
+
+$orange-warning: #ED6500;
+
+$yellow-400: #FFE600;
+
 $branding: #FFC107;
 
 $error: #F95D54;
