Calendar and groups working. Not DBs

--- a/client/src/commonComponents/Icon/Icon.scss
+++ b/client/src/commonComponents/Icon/Icon.scss
@@ -1,8 +1,5 @@
-.cc-icon {
-    color: var(--icon-color);
-    svg {
+.cc-icon svg {
         height: 1.5rem;
         width: 1.5rem;
         fill: currentColor;
-    }
 }
