--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -10,6 +10,7 @@ $grey-500: #2E2E38;
 $grey-550: #2E2E3C;
 $grey-580: #2E2E38;
 $grey-600: #23232F;
+$grey-650: #1E1E2A;
 $grey-700: #000000B3;
 
 $red-300: #F95D54;
